<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.ui.MovieBannerDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="250dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:textColor="@color/gray_dim"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/date_time_txt"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:textColor="@color/gray_dim"
                    android:textSize="12dp"
                    tools:text="Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="30dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center|left"
                        android:text="Overview"
                        android:textColor="@color/gray_dim"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:fontFamily="sans-serif"
                        android:textColor="#cdcdcd"
                        android:textSize="14dp"
                        tools:text="Test" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/movie_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="315dp"
                    android:layout_marginEnd="169dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_background_color"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/adventure"
                        android:textSize="12dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_background_color"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/science_fication"
                        android:textSize="12dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:background="@drawable/button_background_color"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/action"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>